# sb1-6vpxncph

./: .env  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md
src/: App.tsx  index.css  types.ts
src/components/: AuthModal.tsx  DemoDataProvider.tsx  DemoModeToggle.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  Footer.tsx  InvestorBadge.tsx  Layout.tsx  LoadingBoundary.tsx  LoadingScreen.tsx  LoadingSkeleton.tsx  NavBar.tsx  ProjectRecommendations.tsx  ResourceShareModal.tsx
src/components/demo/: ContractPlayground.tsx  ResourceMatchingDemo.tsx  TokenSimulator.tsx
src/components/ui/: Button.tsx  Card.tsx
src/contracts/program/: Cargo.toml
src/contracts/program/src/: access_control.rs  lib.rs  token_instructions.rs  token_standards.rs
src/hooks/: index.ts  useAsyncError.ts  useComments.ts  useErrorHandler.ts  useEvents.ts  usePosts.ts  useProjects.ts  useResources.ts
src/lib/: monitoring.ts  security.ts  supabase.ts
src/lib/ai/: example.ts  system.ts
src/lib/collaboration/: index.ts  protocols.ts
src/lib/governance/: index.ts
src/lib/incentives/: index.ts  reputation.ts  (+1 more)
src/pages/: About.tsx  Admin.tsx  Alpha.tsx  Analytics.tsx  Community.tsx  Create.tsx  Dashboard.tsx  Explore.tsx  Goals.tsx  Home.tsx  InvestorDeck.tsx  Launch.tsx  NotFound.tsx  Profile.tsx  ProjectDetails.tsx  ProjectList.tsx  Resources.tsx  Roadmap.tsx  Settings.tsx
src/store/: authStore.ts  demoStore.ts
supabase/migrations/: 20250118191014_soft_sun.sql  20250118191852_patient_fog.sql
(+37 files in other folders)
