[package]
name = "neplus"
version = "0.1.0"
description = "Core smart contracts for the NEPLUS platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neplus"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"